--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,12 +3,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.zaverecka'
+    namespace 'taluzek.apps.habbit'
     compileSdk 35
 
     defaultConfig {
-        applicationId "com.example.zaverecka"
-        minSdk 29
+        applicationId "taluzek.apps.habbit"
+        minSdk 30
         targetSdk 35
         versionCode 1
         versionName "1.0"
@@ -31,7 +31,6 @@ android {
 dependencies {
 
     implementation 'com.prolificinteractive:material-calendarview:1.4.3'
-
     implementation libs.appcompat
     implementation libs.material
     implementation libs.activity
